Add html and css for the books to be displayed in grid

--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
 </head>
 <body>
 
-    <h1>AA</h1>
+    <div class="header">
+        <h1>My book library</h1>
+        <div class="addbook">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="add"><title>plus</title><path d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" /></svg>
+            <span>Add book</span>
+        </div>
+    </div>
+
+    <main>
+        <div class="book">
+            <span>Book of Ra</span>
+            <span>Author</span>
+            <span>345 pages</span>
+            <div class="buttons">
+                <button type="button">Not read</button>
+                <button type="button">Remove</button>
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
