Add form popup when add book button is clicked

--- a/index.html
+++ b/index.html
@@ -10,25 +10,41 @@
 </head>
 <body>
 
-    <div class="header">
-        <h1>My book library</h1>
-        <div class="addbook">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="add"><title>plus</title><path d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" /></svg>
-            <span>Add book</span>
+    <form id="bookadd">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="closebtn"><title>close-circle</title><path d="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z" /></svg>
+        <label for="bookname">Book name</label>
+        <input type="text" id="bookname">
+        <label for="bookauthor">Book author</label>
+        <input type="text" id="bookauthor">
+        <label for="numofpages">Number of pages</label>
+        <input type="number" id="numofpages">
+        <div>
+            <label for="checkbox">Did you read the book?</label>
+            <input type="checkbox" id="bookread">
         </div>
-    </div>
+    </form>
 
-    <main>
-        <div class="book">
-            <span>Book of Ra</span>
-            <span>Author</span>
-            <span>345 pages</span>
-            <div class="buttons">
-                <button type="button">Not read</button>
-                <button type="button">Remove</button>
+    <div id="darken">
+        <div class="header">
+            <h1>My book library</h1>
+            <div class="addbook">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="add"><title>plus</title><path d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" /></svg>
+                <span>Add book</span>
             </div>
         </div>
-    </main>
+
+        <main>
+            <div class="book">
+                <span>Book of Ra</span>
+                <span>Author</span>
+                <span>345 pages</span>
+                <div class="buttons">
+                    <button type="button">Not read</button>
+                    <button type="button">Remove</button>
+                </div>
+            </div>
+        </main>
+    </div>
     
 </body>
 </html>
