Change how code works completely from duplicating book to creating new

--- a/index.html
+++ b/index.html
@@ -38,15 +38,7 @@
         </div>
 
         <main id="main">
-            <div class="book">
-                <span>Book of Ra</span>
-                <span>Author</span>
-                <span>345 pages</span>
-                <div class="buttons">
-                    <button type="button" class="read">Not read</button>
-                    <button type="button" class="remove">Remove</button>
-                </div>
-            </div>
+            <p id="empty">No books have been added to your library</p>
         </main>
     </div>
     
